--- a/.htaccess
+++ b/.htaccess
@@ -16,34 +16,22 @@ BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
 # CACHE NAVIGATEUR
 # BEGIN Cache-Control Headers
 <IfModule mod_headers.c>
- <FilesMatch "\.(ico|jpe?g|png|gif|svg|webp|swf|css|gz)$">
+ <FilesMatch "\.(ico|js|eot|otf|ttf|woff|woff2|svg|webp|html|css|php|gz)$">
  Header set Cache-Control "max-age=2592000, public"
+ Header unset Set-Cookie
  </FilesMatch>
- <FilesMatch "\.(js)$">
- Header set Cache-Control "max-age=2592000, private"
- </FilesMatch>
-<FilesMatch "\.(html|htm)$">
-Header set Cache-Control "max-age=7200, public"
-</FilesMatch>
-# Enleve le cache pour les ressources dynamiques
-<FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
-Header unset Cache-Control
-</FilesMatch>
 </IfModule>
 # END Cache-Control Headers
 
 # BEGIN Expires Headers
 <IfModule mod_expires.c>
 ExpiresActive On
-ExpiresByType image/jpg "access plus 1 month"
-ExpiresByType image/jpeg "access plus 1 month"
-ExpiresByType image/gif "access plus 1 month"
-ExpiresByType image/png "access plus 1 month"
+ExpiresByType image/svg "access plus 1 month"
+ExpiresByType image/webp "access plus 1 month"
 ExpiresByType text/css "access plus 1 month"
-ExpiresByType application/pdf "access plus 1 month"
 ExpiresByType text/x-javascript "access plus 1 month"
 ExpiresByType application/x-shockwave-flash "access plus 1 year"
 ExpiresByType image/x-icon "access plus 1 year"
-ExpiresDefault "access plus 2 days"
+ExpiresDefault "access plus 1 month"
 </IfModule>
 # END Expires Headers
