--- a/.htaccess
+++ b/.htaccess
@@ -19,7 +19,7 @@ BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
 # BEGIN Cache-Control Headers
 <IfModule mod_headers.c>
 <FilesMatch "\.(ico|js|eot|otf|ttf|woff|woff2|svg|webp|html|css|php|gz)$">
-Header set Cache-Control "max-age=2592000, public"
+Header set Cache-Control "max-age=31104000, public"
 </FilesMatch>
 </IfModule>
 # END Cache-Control Headers
@@ -27,12 +27,12 @@ Header set Cache-Control "max-age=2592000, public"
 # BEGIN Expires Headers
 <IfModule mod_expires.c>
 ExpiresActive On
-ExpiresByType image/svg "access plus 1 month"
-ExpiresByType image/webp "access plus 1 month"
-ExpiresByType text/css "access plus 1 month"
-ExpiresByType text/x-javascript "access plus 1 month"
+ExpiresByType image/svg "access plus 1 year"
+ExpiresByType image/webp "access plus 1 year"
+ExpiresByType text/css "access plus 1 year"
+ExpiresByType text/x-javascript "access plus 1 year"
 ExpiresByType application/x-shockwave-flash "access plus 1 year"
 ExpiresByType image/x-icon "access plus 1 year"
-ExpiresDefault "access plus 1 month"
+ExpiresDefault "access plus 1 year"
 </IfModule>
 # END Expires Headers
