--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,6 @@
 # GZIP Apache 2.0
 # BEGIN GZIP
 <IfModule mod_deflate.c>
-SetOutputFilter DEFLATE
 AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/x-javascript
 
 BrowserMatch ^Mozilla/4 gzip-only-text/html
@@ -18,9 +17,9 @@ BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
 # CACHE NAVIGATEUR
 # BEGIN Cache-Control Headers
 <IfModule mod_headers.c>
-<FilesMatch "\.(ico|js|eot|otf|ttf|woff|woff2|svg|webp|html|css|php|gz)$">
-Header set Cache-Control "max-age=31104000, public"
-</FilesMatch>
+<filesmatch "\\.(ico|js|eot|otf|ttf|woff|woff2|svg|html|css|php|gz)$">
+Header set Cache-Control "max-age=31104000,public"
+</filesmatch>
 </IfModule>
 # END Cache-Control Headers
 
