--- a/.htaccess
+++ b/.htaccess
@@ -1,37 +1,42 @@
-# GZIP Apache 2.0
-# BEGIN GZIP
-<IfModule mod_deflate.c>
-AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/x-javascript
+RewriteEngine On
 
-BrowserMatch ^Mozilla/4 gzip-only-text/html
-BrowserMatch ^Mozilla/4\.0[678] no-gzip
-BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
-BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
-</IfModule>
-# END GZIP
+	## no-www -> www
+RewriteCond %{HTTP_HOST} !^www\.
+RewriteRule ^ https://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L,NE,QSA]
+	## http -> https
+RewriteCond %{HTTPS} off
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L,NE,QSA]
 
-# BEGIN Redirection 301
-# RewriteCond %{HTTP_HOST} ^(.\*)$ https://christinedelacourt.github.io/$1 [L,R=301]
-# END Redirection 301
+AddType 'text/html; charset=UTF-8' html
 
-# CACHE NAVIGATEUR
-# BEGIN Cache-Control Headers
-<IfModule mod_headers.c>
-<filesmatch "\\.(ico|js|eot|otf|ttf|woff|woff2|svg|html|css|php|gz)$">
-Header set Cache-Control "max-age=31104000,public"
-</filesmatch>
-</IfModule>
-# END Cache-Control Headers
-
-# BEGIN Expires Headers
 <IfModule mod_expires.c>
-ExpiresActive On
-ExpiresByType image/svg "access plus 1 year"
-ExpiresByType image/webp "access plus 1 year"
-ExpiresByType text/css "access plus 1 year"
-ExpiresByType text/x-javascript "access plus 1 year"
-ExpiresByType application/x-shockwave-flash "access plus 1 year"
-ExpiresByType image/x-icon "access plus 1 year"
-ExpiresDefault "access plus 1 year"
+
+ ExpiresActive On
+ ExpiresByType image/jpg "access plus 31536000 seconds"
+ ExpiresByType image/jpeg "access plus 31536000 seconds"
+ ExpiresByType image/svg "access plus 31536000 seconds"
+ ExpiresByType image/webp "access plus 31536000 seconds"
+ ExpiresByType image/woff "access plus 31536000 seconds"
+ ExpiresByType image/ico "access plus 31536000 seconds"
+ ExpiresByType text/css "access plus 31536000 seconds"
+ ExpiresByType text/javascript "access plus 31536000 seconds"
+ ExpiresByType text/html "access plus 31536000 seconds"
+
 </IfModule>
-# END Expires Headers
+
+<ifmodule mod_headers.c>
+
+<filesmatch "\\.(ico|jpe?g|svg|webp|woff|gif|swf|gz|ttf|webp)$">
+Header set Cache-Control "max-age=31536000"
+</filesmatch>
+<filesmatch "\\.(css)$">
+Header set Cache-Control "max-age=31536000"
+</filesmatch>
+<filesmatch "\\.(js)$">
+Header set Cache-Control "max-age=31536000"
+</filesmatch>
+<filesmatch "\\.(html|htm)$">
+Header set Cache-Control "max-age=31536000"
+</filesmatch>
+
+</ifmodule>
