--- a/.htaccess
+++ b/.htaccess
@@ -8,7 +8,8 @@ RewriteCond %{HTTPS} off
 RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L,NE,QSA]
 
 AddType 'text/html; charset=UTF-8' html
-
+AddType image/svg svg
+AddType image/webp webp
 <IfModule mod_expires.c>
 
  ExpiresActive On
