--- a/.htaccess
+++ b/.htaccess
@@ -1,27 +1,37 @@
-# MOD_DEFLATE COMPRESSION
-<Directory "/https://christinedelacourt.github.io/panthere-entreprise-webdesign-Lyon">
-AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/x-javascript application/x-httpd-php
-#Pour les navigateurs incompatibles
+# BEGIN Cache-Control Headers
+<IfModule mod_headers.c>
+AddType 'text/html; charset=UTF-8' html
+AddType image/svg+xml svg
+AddType application/x-font-ttf ttc ttf
+AddType application/x-font-woff woff
+AddType application/font-woff2 woff2
+AddType application/vnd.ms-fontobject eot
+<FilesMatch "\.(ico|svg|ttf|woff|woff2|css|gz)$">
+Header set Cache-Control "max-age=2592000, public"
+</FilesMatch>
+<FilesMatch "\.(js)$">
+Header set Cache-Control "max-age=2592000, private"
+</FilesMatch>
+<filesMatch "\.(html|htm)$">
+Header set Cache-Control "max-age=7200, public"
+</filesMatch>
+# Enleve le cache pour les ressources dynamiques
+<FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
+Header unset Cache-Control
+</FilesMatch>
+</IfModule>
+# END Cache-Control Headers
+# Compression gzip
+SetOutputFilter DEFLATE
+AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/x-javascript
+# Compatibilité avec les anciens navigateurs
 BrowserMatch ^Mozilla/4 gzip-only-text/html
 BrowserMatch ^Mozilla/4\.0[678] no-gzip
 BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
 BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
-#ne pas mettre en cache si ces fichiers le sont déjà
-SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png)$ no-gzip
-#les proxies doivent donner le bon contenu
-Header append Vary User-Agent env=!dont-vary
-</Directory>
-RewriteEngine On
-
-	## no-www -> www
-RewriteCond %{HTTP_HOST} !^www\.
-RewriteRule ^ https://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L,NE,QSA]
-	## http -> https
-RewriteCond %{HTTPS} off
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L,NE,QSA]
 
 AddType 'text/html; charset=UTF-8' html
-AddType image/svg svg
+AddType image/svg+xml svg svgz
 AddType image/webp webp
 <IfModule mod_expires.c>
 
