--- a/.htaccess
+++ b/.htaccess
@@ -2,19 +2,20 @@
 <IfModule mod_headers.c>
 AddType 'text/html; charset=UTF-8' html
 AddType image/svg+xml svg
-AddType application/x-font-ttf ttc ttf
-AddType application/x-font-woff woff
-AddType application/font-woff2 woff2
-AddType application/vnd.ms-fontobject eot
-<FilesMatch "\.(ico|svg|ttf|woff|woff2|css|gz)$">
-Header set Cache-Control "max-age=2592000, public"
+AddType font/ttf .ttf
+AddType font/eot .eot
+AddType font/otf .otf
+AddType font/woff .woff
+AddType font/woff2 .woff2   
+<FilesMatch "\.(ico|eot|otf|ttf|woff|woff2|css|gz)$">
+Header set Cache-Control "max-age=31536000, public"
 </FilesMatch>
 <FilesMatch "\.(js)$">
-Header set Cache-Control "max-age=2592000, private"
+Header set Cache-Control "max-age=31536000, private"
 </FilesMatch>
-<filesMatch "\.(html|htm)$">
-Header set Cache-Control "max-age=7200, public"
-</filesMatch>
+<FilesMatch "\.(html|htm)$">
+Header set Cache-Control "max-age=31536000, public"
+</FilesMatch>
 # Enleve le cache pour les ressources dynamiques
 <FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
 Header unset Cache-Control
@@ -47,20 +48,3 @@ AddType image/webp webp
  ExpiresByType text/html "access plus 31536000 seconds"
 
 </IfModule>
-
-<ifmodule mod_headers.c>
-
-<filesmatch "\\.(ico|jpe?g|svg|webp|woff|gif|swf|gz|ttf|webp)$">
-Header set Cache-Control "max-age=31536000"
-</filesmatch>
-<filesmatch "\\.(css)$">
-Header set Cache-Control "max-age=31536000"
-</filesmatch>
-<filesmatch "\\.(js)$">
-Header set Cache-Control "max-age=31536000"
-</filesmatch>
-<filesmatch "\\.(html|htm)$">
-Header set Cache-Control "max-age=31536000"
-</filesmatch>
-
-</ifmodule>
