--- a/.htaccess
+++ b/.htaccess
@@ -37,8 +37,11 @@ AddType image/webp webp
 <IfModule mod_expires.c>
 
  ExpiresActive On
- ExpiresByType image/jpg "access plus 31536000 seconds"
- ExpiresByType image/jpeg "access plus 31536000 seconds"
+ ExpiresByType font/eot "access plus 31536000 seconds"
+ ExpiresByType font/otf "access plus 31536000 seconds"
+ ExpiresByType font/woff "access plus 31536000 seconds"
+ ExpiresByType font/ttf "access plus 31536000 seconds"
+ ExpiresByType font/woff2 "access plus 31536000 seconds"
  ExpiresByType image/svg "access plus 31536000 seconds"
  ExpiresByType image/webp "access plus 31536000 seconds"
  ExpiresByType image/woff "access plus 31536000 seconds"
