--- a/.htaccess
+++ b/.htaccess
@@ -1,28 +1,4 @@
-# BEGIN Cache-Control Headers
-<IfModule mod_headers.c>
-AddType 'text/html; charset=UTF-8' html
-AddType image/svg+xml svg
-AddType font/ttf ttf
-AddType font/eot eot
-AddType font/otf otf
-AddType font/woff woff
-AddType font/woff2 woff2   
-<FilesMatch "\.(ico|eot|otf|svg|ttf|woff|woff2|css|gz)$">
-Header set Cache-Control "max-age=31536000, public"
-</FilesMatch>
-<FilesMatch "\.(js)$">
-Header set Cache-Control "max-age=31536000, private"
-</FilesMatch>
-<FilesMatch "\.(html|htm)$">
-Header set Cache-Control "max-age=31536000, public"
-</FilesMatch>
-# Enleve le cache pour les ressources dynamiques
-<FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
-Header unset Cache-Control
-</FilesMatch>
-</IfModule>
-# END Cache-Control Headers
-# Compression gzip
+# Compression gzip debut
 SetOutputFilter DEFLATE
 AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/x-javascript
 # Compatibilité avec les anciens navigateurs
@@ -30,24 +6,32 @@ BrowserMatch ^Mozilla/4 gzip-only-text/html
 BrowserMatch ^Mozilla/4\.0[678] no-gzip
 BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
 BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
-
-AddType 'text/html; charset=UTF-8' html
-AddType image/svg+xml svg svgz
-AddType image/webp webp
+# Compression gzip fin
+# BEGIN Cache-Control Headers
 <IfModule mod_expires.c>
-
- ExpiresActive On
- ExpiresByType font/eot "access plus 31536000 seconds"
- ExpiresByType font/otf "access plus 31536000 seconds"
- ExpiresByType font/woff "access plus 31536000 seconds"
- ExpiresByType font/ttf "access plus 31536000 seconds"
- ExpiresByType font/woff2 "access plus 31536000 seconds"
- ExpiresByType image/svg "access plus 31536000 seconds"
- ExpiresByType image/webp "access plus 31536000 seconds"
- ExpiresByType image/woff "access plus 31536000 seconds"
- ExpiresByType image/ico "access plus 31536000 seconds"
- ExpiresByType text/css "access plus 31536000 seconds"
- ExpiresByType text/javascript "access plus 31536000 seconds"
- ExpiresByType text/html "access plus 31536000 seconds"
-
+ExpiresActive On
+AddType application/vnd.ms-fontobject .eot 
+AddType application/x-font-ttf .ttf
+AddType application/x-font-opentype .otf
+AddType application/x-font-woff .woff
+AddType image/svg+xml .svg
+ExpiresByType application/vnd.ms-fontobject "access 1 year"
+ExpiresByType application/x-font-ttf "access 1 year"
+ExpiresByType application/x-font-opentype "access 1 year"
+ExpiresByType application/x-font-woff "access 1 year"
+ExpiresByType image/svg+xml "access 1 year"
+ExpiresByType text/html "access 1 hour"
+ExpiresByType text/css "access 14 days"
+ExpiresByType text/x-javascript "access 3 weeks"
+ExpiresByType application/javascript "access 1 month"  
+ExpiresByType application/x-javascript "access 1 month"
+ExpiresByType image/gif "access 2 months"
+ExpiresByType image/png "access 2 months"
+ExpiresByType image/jpg "access 2 months"
+ExpiresByType image/jpeg "access 2 months"
+ExpiresByType image/gif "access 2 months"
+ExpiresByType application/pdf "access 1 year"
+ExpiresByType application/x-shockwave-flash "access 1 year"
+ExpiresByType image/x-icon "access 1 year"
+ExpiresDefault "access 2 days"
 </IfModule>
