--- a/.htaccess
+++ b/.htaccess
@@ -32,7 +32,7 @@ ExpiresByType image/png "access 1 year"
 ExpiresByType image/jpg "access 1 year"
 ExpiresByType image/jpeg "access 1 year"
 ExpiresByType image/gif "access 1 year"
-ExpiresByType image/webp "access 1 year"
+ExpiresByType image/webp "access plus 1 year"
 ExpiresByType application/pdf "access 1 year"
 ExpiresByType application/x-shockwave-flash "access 1 year"
 ExpiresByType image/x-icon "access 1 year"
