--- a/.htaccess
+++ b/.htaccess
@@ -1,40 +1,45 @@
-# Compression gzip debut
+# GZIP Apache 2.0
+# BEGIN GZIP
 SetOutputFilter DEFLATE
 AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/x-javascript
-# Compatibilité avec les anciens navigateurs
+
 BrowserMatch ^Mozilla/4 gzip-only-text/html
 BrowserMatch ^Mozilla/4\.0[678] no-gzip
 BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
 BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
-# Compression gzip fin
+# END GZIP
+
+# CACHE NAVIGATEUR
 # BEGIN Cache-Control Headers
+<IfModule mod_headers.c>
+ <FilesMatch "\.(ico|jpe?g|png|gif|swf|css|gz)$">
+ Header set Cache-Control "max-age=2592000, public"
+ </FilesMatch>
+ <FilesMatch "\.(js)$">
+ Header set Cache-Control "max-age=2592000, private"
+ </FilesMatch>
+<filesMatch "\.(html|htm)$">
+Header set Cache-Control "max-age=7200, public"
+</filesMatch>
+# Enleve le cache pour les ressources dynamiques
+<FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
+Header unset Cache-Control
+</FilesMatch>
+</IfModule>
+# END Cache-Control Headers
+
+# BEGIN Expires Headers
 <IfModule mod_expires.c>
 ExpiresActive On
-AddType application/vnd.ms-fontobject .eot 
-AddType application/x-font-ttf .ttf
-AddType application/x-font-opentype .otf
-AddType application/x-font-woff .woff
-AddType image/svg+xml .svg
-AddType image/webp .webp
-ExpiresByType application/vnd.ms-fontobject "access 1 year"
-ExpiresByType application/x-font-ttf "access 1 year"
-ExpiresByType application/x-font-opentype "access 1 year"
-ExpiresByType application/x-font-woff "access 1 year"
-ExpiresByType image/svg+xml "access 1 year"
-ExpiresByType text/html "access 1 hour"
-ExpiresByType text/css "access 1 year"
-ExpiresByType text/js "access 1 year"
-ExpiresByType text/x-javascript "access 1 year"
-ExpiresByType application/javascript "access 1 year"  
-ExpiresByType application/x-javascript "access 1 year"
-ExpiresByType image/gif "access 1 year"
-ExpiresByType image/png "access 1 year"
-ExpiresByType image/jpg "access 1 year"
-ExpiresByType image/jpeg "access 1 year"
-ExpiresByType image/gif "access 1 year"
-ExpiresByType image/webp "access plus 1 year"
-ExpiresByType application/pdf "access 1 year"
-ExpiresByType application/x-shockwave-flash "access 1 year"
-ExpiresByType image/x-icon "access 1 year"
-ExpiresDefault "access 2 days"
+ExpiresByType image/jpg "access plus 1 month"
+ExpiresByType image/jpeg "access plus 1 month"
+ExpiresByType image/gif "access plus 1 month"
+ExpiresByType image/png "access plus 1 month"
+ExpiresByType text/css "access plus 1 month"
+ExpiresByType application/pdf "access plus 1 month"
+ExpiresByType text/x-javascript "access plus 1 month"
+ExpiresByType application/x-shockwave-flash "access plus 1 year"
+ExpiresByType image/x-icon "access plus 1 year"
+ExpiresDefault "access plus 2 days"
 </IfModule>
+# END Expires Headers
