--- a/.htaccess
+++ b/.htaccess
@@ -18,9 +18,9 @@ BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
  <FilesMatch "\.(js)$">
  Header set Cache-Control "max-age=2592000, private"
  </FilesMatch>
-<filesMatch "\.(html|htm)$">
+<FilesMatch "\.(html|htm)$">
 Header set Cache-Control "max-age=7200, public"
-</filesMatch>
+</FilesMatch>
 # Enleve le cache pour les ressources dynamiques
 <FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
 Header unset Cache-Control
@@ -31,15 +31,7 @@ Header unset Cache-Control
 # BEGIN Expires Headers
 <IfModule mod_expires.c>
 ExpiresActive On
-ExpiresByType image/jpg "access plus 1 month"
-ExpiresByType image/jpeg "access plus 1 month"
-ExpiresByType image/gif "access plus 1 month"
-ExpiresByType image/png "access plus 1 month"
 ExpiresByType text/css "access plus 1 month"
-ExpiresByType application/pdf "access plus 1 month"
-ExpiresByType text/x-javascript "access plus 1 month"
-ExpiresByType application/x-shockwave-flash "access plus 1 year"
-ExpiresByType image/x-icon "access plus 1 year"
-ExpiresDefault "access plus 2 days"
+ExpiresDefault "access plus 1 year"
 </IfModule>
 # END Expires Headers
